--- a/E-Cart.html
+++ b/E-Cart.html
@@ -20,7 +20,7 @@
         <div class="navbar">
             <a href="#" id="linc"><h1>HOME</h1></a>
             <a href="#cls" id="linc"><h1>CLOTHINGS</h1></a> 
-            <a href="#" id="linc"><h1>ACCESSORIES</h1></a>
+            <a href="#acs" id="linc"><h1>ACCESSORIES</h1></a>
         </div>
         <div class="navui">
             <img src="https://www.freeiconspng.com/thumbs/search-icon-png/search-icon-png-21.png" alt="search"
@@ -144,7 +144,7 @@
         </section>
 
         <section>
-            <div class="accessories-sec">
+            <div class="accessories-sec" id="acs">
                 <div class="accessories-sec-in">
                     <div class="accessories-sec-head">
                         <h1> Accessories for Men and Women </h1>
